Update course webpage

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -127,6 +127,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/EASTON.CSV">EASTON.CSV</a>
       <li><a href="data/Fall13NYUSurvey.csv">Fall13NYUSurvey.csv</a>
     </ul>
+  <li><a href="lecture/reg-qualquant.pdf">Dec 3 - Regression with Qualitative and Quantitative Variables</a>
+    (<a href="lecture/reg-qualquant-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/Fall13NYUSurvey.csv">Fall13NYUSurvey.csv</a>
+    </ul>
 </ul>
 
 <h2>Handouts and Assignments</h2>
@@ -207,5 +212,12 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="hw/module3.pdf">Project Module #3</a>
     (Due Dec&nbsp;11)
+  <li><a href="hw/hw11.pdf">Homework #11</a>
+    (Optional, Not Collected)
+    <ul>
+      <li><a href="data/ACCHW.CSV">ACCHW.CSV</a>
+      <li><a href="data/Gesell.CSV">Gesell.CSV</a>
+      <li><a href="data/Volatile.CSV">Volatile.CSV</a>
+    </ul>
 </ul>
 </main>
