Add missing solutions

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -188,7 +188,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/TEES.CSV">TEES.CSV</a>
     </ul>
   <li><a href="hw/hw08.pdf">Homework #8</a>
-    (Due Nov&nbsp;5)
+    (<a href="hw/hw08sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/HONEYCOUGH.CSV">HONEYCOUGH.CSV</a>
     </ul>
@@ -200,7 +200,7 @@ stylesheet: /css/main.css?v=1
       <li>Bring a calculator and one page of notes (front &amp; back)
     </ul>
   <li><a href="hw/hw09.pdf">Homework #9</a>
-    (Due Nov&nbsp;19)
+    (<a href="hw/hw09sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/Ojuice.CSV">Ojuice.CSV</a>
     </ul>
