--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -71,6 +71,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/mealsData.csv">mealsData.csv</a>
       <li><a href="data/Village.CSV">Village.CSV</a>
     </ul>
+  <li><a href="lecture/reg-multiple.pdf">Dec 8 - Multiple Regression, F Tests</a>
+    (<a href="lecture/reg-multiple-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/EASTON.CSV">EASTON.CSV</a>
+      <li><a href="data/mealsData.csv">mealsData.csv</a>
+    </ul>
 </ul>
 
 
@@ -86,6 +92,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e97af614d3ef4284a070f4a6fd1376831d">Nov 10</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/c66be5aab44f4b1aadbb1f4eadc698321d">Nov 17</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/53f9eb2707c74e219a0b6937ed4ec8901d">Dec 1</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/106816bf28414f5d8f276ae12993135d1d">Dec 8</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -144,5 +151,13 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/PriceToEarnings.CSV">PriceToEarnings.CSV</a>
     </ul>
+  <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
+  <li><a href="hw/hw09.pdf">Homework 9</a>
+    (Due Dec. 15)
+    <ul>
+      <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
+      <li><a href="data/MAGAZINE.CSV">MAGAZINE.CSV</a>
+    </ul>
+  <li><a href="handout/final.pdf">Sample Final</a>
 </ul>
 </main>
