Add missing solutions, handouts

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -132,6 +132,10 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/Fall13NYUSurvey.csv">Fall13NYUSurvey.csv</a>
     </ul>
+  <li><a href="lecture/reg-modelsel.pdf">Dec 5 - Model Selection</a>
+    (<a href="lecture/reg-modelsel-sol.pdf">Solutions</a>)
+  <li><a href="lecture/reg-qualquant.pdf">Dec 8 - Regression with Qualitative and Quantitative Variables</a>
+    (<a href="lecture/reg-qualquant-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
@@ -205,7 +209,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/Ojuice.CSV">Ojuice.CSV</a>
     </ul>
   <li><a href="hw/hw10.pdf">Homework #10</a>
-    (Due Dec&nbsp;3)
+    (<a href="hw/hw10sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/LIQUIDSPILL.CSV">LIQUIDSPILL.CSV</a>
       <li><a href="data/DefaultInt.CSV">DefaultInt.CSV</a>
@@ -213,11 +217,12 @@ stylesheet: /css/main.css?v=1
   <li><a href="hw/module3.pdf">Project Module #3</a>
     (Due Dec&nbsp;11)
   <li><a href="hw/hw11.pdf">Homework #11</a>
-    (Optional, Not Collected)
+    (<a href="hw/hw11sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/ACCHW.CSV">ACCHW.CSV</a>
       <li><a href="data/Gesell.CSV">Gesell.CSV</a>
       <li><a href="data/Volatile.CSV">Volatile.CSV</a>
     </ul>
+  <li><a href="handout/final.pdf">Sample Final</a>
 </ul>
 </main>
