Fix Monday lecture

--- a/course/ub0103/index.html
+++ b/course/ub0103/index.html
@@ -134,8 +134,8 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/reg-modelsel.pdf">Dec 5 - Model Selection</a>
     (<a href="lecture/reg-modelsel-sol.pdf">Solutions</a>)
-  <li><a href="lecture/reg-qualquant.pdf">Dec 8 - Regression with Qualitative and Quantitative Variables</a>
-    (<a href="lecture/reg-qualquant-sol.pdf">Solutions</a>)
+  <li><a href="lecture/reg-interaction.pdf">Dec 8 - Regression with Interactions</a>
+    (<a href="lecture/reg-interaction-sol.pdf">Solutions</a>)
 </ul>
 
 <h2>Handouts and Assignments</h2>
