--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -145,7 +145,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/retail_sales.csv">retail_sales.csv</a>
     </ul>
   <li><a href="hw/hw08.pdf">Homework 8</a>
-    (Due Dec. 8)
+    (<a href="hw/hw08sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
