--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -153,7 +153,7 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
   <li><a href="hw/hw09.pdf">Homework 9</a>
-    (Due Dec. 15)
+    (<a href="hw/hw09sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
       <li><a href="data/MAGAZINE.CSV">MAGAZINE.CSV</a>
