Add sample final solutions

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -159,5 +159,6 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/MAGAZINE.CSV">MAGAZINE.CSV</a>
     </ul>
   <li><a href="handout/final.pdf">Sample Final</a>
+    (<a href="handout/final-sol.pdf">Solutions</a>)
 </ul>
 </main>
