Add office hours

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -14,7 +14,12 @@ stylesheet: /css/main.css?v=1
 <dl>
   <dt>Instructor</dt>
   <dd>Prof. Perry (pperry@stern.nyu.edu)</dd>
-  <dd>Office Hours: TBA</dd>
+  <dd>Office Hours: Thursday, 1:30PM-3:00PM, KMC 8-63 (or by appointment)</dd>
+</dl>
+<dl>
+  <dt>Teaching Fellow</dt>
+  <dd>Bryan Ball (bbb288@nyu.edu)</dd>
+  <dd>Office Hours: Monday, 6:00PM-7:30PM, KMC 8th Floor (near mailboxes)</dd>
 </dl>
 
 
