Add link to Cliff's notes

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -26,5 +26,6 @@ stylesheet: /css/main.css?v=1
 <h2>Handouts and Assignments</h2>
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
+  <li><a href="http://people.stern.nyu.edu/churvich/Forecasting/handouts.htm">Cliff Hurvich's Forecasting Notes</a>
 </ul>
 </main>
