--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -22,10 +22,27 @@ stylesheet: /css/main.css?v=1
   <dd>Office Hours: Monday, 6:00PM-7:30PM, KMC 8th Floor (near mailboxes)</dd>
 </dl>
 
+<h2>Lecture Notes</h2>
+<ul>
+</ul>
 
-<h2>Handouts and Assignments</h2>
+
+<h2>Handouts</h2>
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
   <li><a href="http://people.stern.nyu.edu/churvich/Forecasting/handouts.htm">Cliff Hurvich's Forecasting Notes</a>
 </ul>
+
+
+<h2>Assignments</h2>
+<ul>
+  <li><a href="hw/hw01.pdf">Homework 1</a>
+    <ul>
+      <li><a href="hw/01/prob1.Rmd">prob1.Rmd</a>
+      <li><a href="hw/01/prob2.Rmd">prob2.Rmd</a>
+      <li><a href="data/dow.csv">dow.csv</a>
+      <li><a href="data/euro.csv">eruo.csv</a>
+    </ul>
+</ul>
+
 </main>
