--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -27,9 +27,12 @@ stylesheet: /css/main.css?v=1
 </ul>
 
 
-<h2>Handouts</h2>
+<h2>Handouts and Links</h2>
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
+  <li><a href="http://cran.r-project.org/bin/macosx/">Install R (Mac)</a>
+  <li><a href="http://cran.r-project.org/bin/windows/base/">Install R (Windows)</a>
+  <li><a href="http://www.rstudio.com/products/rstudio/download/">Install RStudtio</a>
   <li><a href="http://people.stern.nyu.edu/churvich/Forecasting/handouts.htm">Cliff Hurvich's Forecasting Notes</a>
 </ul>
 
