Add R introduction handout

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -34,6 +34,9 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://cran.r-project.org/bin/windows/base/">Install R (Windows)</a>
   <li><a href="http://www.rstudio.com/products/rstudio/download/">Install RStudio</a>
   <li><a href="http://people.stern.nyu.edu/churvich/Forecasting/handouts.htm">Cliff Hurvich's Forecasting Notes</a>
+  <li><a href="handout/r-intro.html">Introduction to R</a>
+    (<a href="handout/r-intro.pdf">pdf</a>;
+     <a href="handout/r-intro.Rmd">Rmd</a>)
 </ul>
 
 
