Add intro lecture slides

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -22,8 +22,10 @@ stylesheet: /css/main.css?v=1
   <dd>Office Hours: Monday, 6:00PM-7:30PM, KMC 8th Floor (near mailboxes)</dd>
 </dl>
 
-<h2>Lecture Notes</h2>
+<h2>Lecture Slides</h2>
 <ul>
+  <li><a href="lecture/intro.html">Introduction</a>
+      (<a href="lecture/intro.Rmd">Rmd</a>)
 </ul>
 
 
