Add link to lecture video

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -28,6 +28,13 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/intro.Rmd">Rmd</a>)
 </ul>
 
+<h2>Lecture Videos</h2>
+<ul>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f38d9fd3b1504a8cb225c8a9a6dd1dd61d">Feb 10</a>
+</ul>
+<p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
+  and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
+</p>
 
 <h2>Handouts and Links</h2>
 <ul>
