Update forecasting page

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -26,11 +26,14 @@ stylesheet: /css/main.css?v=1
 <ul>
   <li><a href="lecture/intro.html">Introduction</a>
       (<a href="lecture/intro.Rmd">Rmd</a>)
+  <li><a href="lecture/stationary.html">Simple Stationary Processes</a>
+      (<a href="lecture/stationary.Rmd">Rmd</a>)
 </ul>
 
 <h2>Lecture Videos</h2>
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f38d9fd3b1504a8cb225c8a9a6dd1dd61d">Feb 10</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/65521a3faa514b8e9118193d8f7f3da11d">Feb 17</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -56,8 +59,14 @@ stylesheet: /css/main.css?v=1
       <li><a href="hw/01/prob1.Rmd">prob1.Rmd</a>
       <li><a href="hw/01/prob2.Rmd">prob2.Rmd</a>
       <li><a href="data/dow.csv">dow.csv</a>
-      <li><a href="data/euro.csv">eruo.csv</a>
+      <li><a href="data/euro.csv">euro.csv</a>
     </ul>
+  <li><a href="hw/hw02.pdf">Homework 2</a>
+    <ul>
+      <li><a href="hw/02/probs1to3.Rmd">probs1to3.Rmd</a>
+      <li><a href="data/russell.csv">russell.csv</a>
+    </ul>
+  <li><a href="hw/warmup01.pdf">Warmup for HW2 and HW3</a> (do but don't turn in)
 </ul>
 
 </main>
