Update forecasting page

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -28,12 +28,15 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/intro.Rmd">Rmd</a>)
   <li><a href="lecture/stationary.html">Simple Stationary Processes</a>
       (<a href="lecture/stationary.Rmd">Rmd</a>)
+  <li><a href="lecture/autocor.html">Autocorrelation</a>
+      (<a href="lecture/autocor.Rmd">Rmd</a>)
 </ul>
 
 <h2>Lecture Videos</h2>
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f38d9fd3b1504a8cb225c8a9a6dd1dd61d">Feb 10</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/65521a3faa514b8e9118193d8f7f3da11d">Feb 17</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/5e06922cbdbf43e483469c4e225a92041d">Feb 24</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -67,6 +70,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/russell.csv">russell.csv</a>
     </ul>
   <li><a href="hw/warmup01.pdf">Warmup for HW2 and HW3</a> (do but don't turn in)
+  <li><a href="hw/hw03.pdf">Homework 3</a>
 </ul>
 
 </main>
