--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -71,6 +71,13 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="hw/warmup01.pdf">Warmup for HW2 and HW3</a> (do but don't turn in)
   <li><a href="hw/hw03.pdf">Homework 3</a>
+  <li><a href="hw/hw04.pdf">Homework 4</a>
+    <ul>
+      <li><a href="hw/04/probs2to5.Rmd">probs2to5.Rmd</a>
+      <li><a href="data/cpi.csv">cpi.csv</a>
+      <li><a href="data/gdp.csv">gdp.csv</a>
+      <li><a href="data/housingstarts.csv">housingstarts.csv</a>
+    </ul>
 </ul>
 
 </main>
