--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -10,6 +10,7 @@ stylesheet: /css/main.css?v=1
      alt="Dow Jones Industrial Average 1914-2014"
      style="display: block; margin-left: auto; margin-right: auto">
 
+
 <h2>Course Staff</h2>
 <dl>
   <dt>Instructor</dt>
@@ -22,6 +23,7 @@ stylesheet: /css/main.css?v=1
   <dd>Office Hours: Monday, 6:00PM-7:30PM, KMC 8th Floor (near mailboxes)</dd>
 </dl>
 
+
 <h2>Lecture Slides</h2>
 <ul>
   <li><a href="lecture/intro.html">Introduction</a>
@@ -30,7 +32,12 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/stationary.Rmd">Rmd</a>)
   <li><a href="lecture/autocor.html">Autocorrelation</a>
       (<a href="lecture/autocor.Rmd">Rmd</a>)
+  <li><a href="lecture/arstationary.html">Stationary and Nonstationary AR Models</a>
+      (<a href="lecture/arstationary.Rmd">Rmd</a>)
+  <li><a href="lecture/identify.html">Model Identification with ACF, PACF</a>
+      (<a href="lecture/identify.Rmd">Rmd</a>)
 </ul>
+
 
 <h2>Lecture Videos</h2>
 <ul>
@@ -41,6 +48,7 @@ stylesheet: /css/main.css?v=1
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
 </p>
+
 
 <h2>Handouts and Links</h2>
 <ul>
