--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -44,6 +44,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/f38d9fd3b1504a8cb225c8a9a6dd1dd61d">Feb 10</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/65521a3faa514b8e9118193d8f7f3da11d">Feb 17</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/5e06922cbdbf43e483469c4e225a92041d">Feb 24</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/406599747f9e4ec0ab363f9412268efd1d">Mar 03</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
