--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -36,6 +36,10 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/arstationary.Rmd">Rmd</a>)
   <li><a href="lecture/identify.html">Model Identification with ACF, PACF</a>
       (<a href="lecture/identify.Rmd">Rmd</a>)
+  <li><a href="lecture/google.html">Analysis of the Google Series</a>
+      (<a href="lecture/google.Rmd">Rmd</a>)
+  <li><a href="lecture/housingstarts.html">Analysis of the Housing Starts Series</a>
+      (<a href="lecture/housingstarts.Rmd">Rmd</a>)
 </ul>
 
 
@@ -86,6 +90,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/cpi.csv">cpi.csv</a>
       <li><a href="data/gdp.csv">gdp.csv</a>
       <li><a href="data/housingstarts.csv">housingstarts.csv</a>
+    </ul>
+  <li><a href="hw/hw05.pdf">Homework 5</a>
+    <ul>
+      <li><a href="hw/05/hw05.Rmd">hw05.Rmd</a>
+      <li><a href="data/unemployment.csv">unemployment.csv</a>
     </ul>
 </ul>
 
