Add lectures, proj1

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -40,6 +40,12 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/google.Rmd">Rmd</a>)
   <li><a href="lecture/housingstarts.html">Analysis of the Housing Starts Series</a>
       (<a href="lecture/housingstarts.Rmd">Rmd</a>)
+  <li><a href="lecture/bootstrap.html">Bootstrap Forecast Intervals</a>
+      (<a href="lecture/bootstrap.Rmd">Rmd</a>)
+  <li><a href="lecture/seasonal.html">Seasonal Models</a>
+      (<a href="lecture/seasonal.Rmd">Rmd</a>)
+  <li><a href="lecture/cokerev.html">Coca-Cola Revenue Analysis</a>
+      (<a href="lecture/cokerev.Rmd">Rmd</a>)
 </ul>
 
 
@@ -97,6 +103,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="hw/05/hw05.Rmd">hw05.Rmd</a>
       <li><a href="data/unemployment.csv">unemployment.csv</a>
     </ul>
+  <li><a href="hw/proj01.pdf">Project 1</a>
 </ul>
 
 </main>
