Add chaos lecture

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -46,6 +46,8 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/seasonal.Rmd">Rmd</a>)
   <li><a href="lecture/cokerev.html">Coca-Cola Revenue Analysis</a>
       (<a href="lecture/cokerev.Rmd">Rmd</a>)
+  <li><a href="lecture/chaos.html">Chaos</a>
+      (<a href="lecture/chaos.Rmd">Rmd</a>)
 </ul>
 
 
