Add arch, gm, nasdaq lectures

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -48,6 +48,12 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/cokerev.Rmd">Rmd</a>)
   <li><a href="lecture/chaos.html">Chaos</a>
       (<a href="lecture/chaos.Rmd">Rmd</a>)
+  <li><a href="lecture/nasdaq.html">NASDAQ Analysis</a>
+      (<a href="lecture/nasdaq.Rmd">Rmd</a>)
+  <li><a href="lecture/arch.html">ARCH Models</a>
+      (<a href="lecture/arch.Rmd">Rmd</a>)
+  <li><a href="lecture/gm.html">General Motors Volatility</a>
+      (<a href="lecture/gm.Rmd">Rmd</a>)
 </ul>
 
 
