--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -66,6 +66,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/baad22a630f741e08a3cbc61aa6dd45c1d">Mar 10</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a57dbb89061d44eda08a8fd0dc124a871d">Mar 24</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b337faedf5c249a1bc3ce94c3fec9d3b1d">Mar 31</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/96457a4df7684796b11fb2bd25b096701d">Apr 07</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
