--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -115,6 +115,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/unemployment.csv">unemployment.csv</a>
     </ul>
   <li><a href="hw/proj01.pdf">Project 1</a>
+  <li><a href="hw/hw06.pdf">Homework 6</a>
+    <ul>
+      <li><a href="hw/06/hw06.Rmd">hw06.Rmd</a>
+      <li><a href="data/chaos1.csv">chaos1.csv</a>
+      <li><a href="data/chaos2.csv">chaos2.csv</a>
+    </ul>
 </ul>
 
 </main>
