Add archfit, archsim lectures, hw7

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -54,6 +54,10 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/arch.Rmd">Rmd</a>)
   <li><a href="lecture/gm.html">General Motors Volatility</a>
       (<a href="lecture/gm.Rmd">Rmd</a>)
+  <li><a href="lecture/archsim.html">Simulating ARCH Models</a>
+      (<a href="lecture/archsim.Rmd">Rmd</a>)
+  <li><a href="lecture/archfit.html">Fitting and Diagnostic Checking for ARCH Models</a>
+      (<a href="lecture/archfit.Rmd">Rmd</a>)
 </ul>
 
 
@@ -67,6 +71,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a57dbb89061d44eda08a8fd0dc124a871d">Mar 24</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b337faedf5c249a1bc3ce94c3fec9d3b1d">Mar 31</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/96457a4df7684796b11fb2bd25b096701d">Apr 07</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/72c2edc0bb2f48ac92a2cdf221f8ba661d">Apr 14</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -121,6 +126,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/chaos1.csv">chaos1.csv</a>
       <li><a href="data/chaos2.csv">chaos2.csv</a>
     </ul>
+  <li><a href="hw/hw07.pdf">Homework 7</a>
 </ul>
 
 </main>
