--- a/reports/index.html
+++ b/reports/index.html
@@ -7,6 +7,13 @@ title: Patrick O. Perry - Reports
 <section class="bibliography">
   <ul>
     <li>
+      <a href="http://arxiv.org/abs/1504.04941">Fast Moment-Based Estimation for Hierarchical Models</a>.
+      Submitted.
+      <ul>
+        <li>R Package: <a href="http://cran.r-project.org/web/packages/mbest/index.html">mbest</a>
+        <li>Code to Reproduce Figures: <a href="mhlm/mhlm-sources.tar.gz">mhglm-sources.tar.gz</a>
+      </ul>
+    <li>
       <a href="http://arxiv.org/abs/1310.7269">Degrees of freedom for combining regression with factor analysis</a>.
       With N. S. Pillai.
       Submitted.
