--- a/reports/index.html
+++ b/reports/index.html
@@ -11,7 +11,7 @@ title: Patrick O. Perry - Reports
       Submitted.
       <ul>
         <li>R Package: <a href="http://cran.r-project.org/web/packages/mbest/index.html">mbest</a>
-        <li>Code to Reproduce Figures: <a href="mhlm/mhlm-sources.tar.gz">mhglm-sources.tar.gz</a>
+        <li>Code to Reproduce Figures: <a href="mhlm/mhlm-sources.tar.gz">mhlm-sources.tar.gz</a>
       </ul>
     <li>
       <a href="http://arxiv.org/abs/1310.7269">Degrees of freedom for combining regression with factor analysis</a>.
