--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -58,6 +58,12 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/archsim.Rmd">Rmd</a>)
   <li><a href="lecture/archfit.html">Fitting and Diagnostic Checking for ARCH Models</a>
       (<a href="lecture/archfit.Rmd">Rmd</a>)
+  <li><a href="lecture/bearstearns.html">Bear Stearns Data Analysis</a>
+      (<a href="lecture/bearstearns.Rmd">Rmd</a>)
+  <li><a href="lecture/nasdaq-arch.html">NASDAQ ARCH Analysis</a>
+      (<a href="lecture/nadaq-arch.Rmd">Rmd</a>)
+  <li><a href="lecture/options.html">GARCH Option Pricing</a>
+      (<a href="lecture/options.Rmd">Rmd</a>)
 </ul>
 
 
@@ -72,6 +78,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b337faedf5c249a1bc3ce94c3fec9d3b1d">Mar 31</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/96457a4df7684796b11fb2bd25b096701d">Apr 07</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/72c2edc0bb2f48ac92a2cdf221f8ba661d">Apr 14</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a17c6a89da95458cb147c98796b20fdd1d">Apr 21</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -127,6 +134,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/chaos2.csv">chaos2.csv</a>
     </ul>
   <li><a href="hw/hw07.pdf">Homework 7</a>
+  <li><a href="hw/hw08.pdf">Homework 8</a>
+    <ul>
+      <li>hw08.Rmd (available April 22)
+      <li><a href="data/rupee.csv">rupee.csv</a>
+    </ul>
 </ul>
 
 </main>
