--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -136,7 +136,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="hw/hw07.pdf">Homework 7</a>
   <li><a href="hw/hw08.pdf">Homework 8</a>
     <ul>
-      <li>hw08.Rmd (available April 22)
+      <li><a href="hw/08/hw08.Rmd">hw08.Rmd</a>
       <li><a href="data/rupee.csv">rupee.csv</a>
     </ul>
 </ul>
