Update course page with new content

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -64,6 +64,12 @@ stylesheet: /css/main.css?v=1
       (<a href="lecture/nadaq-arch.Rmd">Rmd</a>)
   <li><a href="lecture/options.html">GARCH Option Pricing</a>
       (<a href="lecture/options.Rmd">Rmd</a>)
+  <li><a href="lecture/fracdiff.html">Long Memory</a>
+      (<a href="lecture/fracdiff.Rmd">Rmd</a>)
+  <li><a href="lecture/fracdiff.html">Long Memory</a>
+      (<a href="lecture/fracdiff.Rmd">Rmd</a>)
+  <li><a href="lecture/inflation.html">Estimating Average Inflation</a>
+      (<a href="lecture/inflation.Rmd">Rmd</a>)
 </ul>
 
 
@@ -79,6 +85,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/96457a4df7684796b11fb2bd25b096701d">Apr 07</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/72c2edc0bb2f48ac92a2cdf221f8ba661d">Apr 14</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a17c6a89da95458cb147c98796b20fdd1d">Apr 21</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a5c475e5408a4d4ca05fee0eaaf483fe1d">Apr 28</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -139,6 +146,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="hw/08/hw08.Rmd">hw08.Rmd</a>
       <li><a href="data/rupee.csv">rupee.csv</a>
     </ul>
+  <li><a href="hw/proj02.pdf">Project 2 (Due May 5)</a>
 </ul>
 
 </main>
