Add forecasting hw9

--- a/course/forecasting/index.html
+++ b/course/forecasting/index.html
@@ -88,6 +88,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/72c2edc0bb2f48ac92a2cdf221f8ba661d">Apr 14</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a17c6a89da95458cb147c98796b20fdd1d">Apr 21</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/a5c475e5408a4d4ca05fee0eaaf483fe1d">Apr 28</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/641e21279b6f458eb01930bbc76022f61d">May 05</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -149,6 +150,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/rupee.csv">rupee.csv</a>
     </ul>
   <li><a href="hw/proj02.pdf">Project 2 (Due May 5)</a>
+  <li><a href="hw/hw09.pdf">Homework 9</a>
+    <ul>
+      <li><a href="hw/09/DFTable.pdf">Dickey-Fuller Table</a>
+      <li><a href="hw/09/hw09.Rmd">hw09.Rmd</a>
+      <li><a href="data/gilt.csv">gilt.csv</a>
+    </ul>
 </ul>
 
 </main>
