--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -14,11 +14,12 @@ stylesheet: /css/main.css?v=1
   <dd>Office Hours: Thursday 11:00AM&ndash;12:30PM, KMC 8-63 (or by appointment)</dd>
 
   <dt>Teaching Fellow</dt>
-  <dd>Lawrence Roitman (lsr297@stern.nyu.edu)</dd>
-  <dd>Office Hours: Thursday 6:00PM&ndash;7:30PM, KMC 8th Floor (near mailboxes)</dd>
+  <dd>Paul Neumaier (pjn222@stern.nyu.edu)</dd>
+  <dd>Office Hours: TBA</dd> <!-- Thursday 6:00PM&ndash;7:30PM, KMC 8th Floor (near mailboxes)</dd> -->
 </dl>
 
 
+<!--
 <h2>Lecture Notes</h2>
 <ul>
   <li><a href="lecture/sampling.pdf">Sep 22 (1) - Sampling / Descriptive Statistics 1</a>
@@ -77,9 +78,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/EASTON.CSV">EASTON.CSV</a>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
+-->
 </ul>
 
 
+<!--
 <h2>Lecture Videos</h2>
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e93a6fb81c29453db4d40357c77114241d">Sep 22</a>
@@ -97,11 +100,12 @@ stylesheet: /css/main.css?v=1
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
 </p>
-
+-->
 
 <h2>Handouts and Assignments</h2>
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
+<!--
   <li><a href="http://goo.gl/hs16Kk">Class Survey</a>
   <li><a href="handout/minitab-tips.pdf">Minitab Tips</a>
   <li><a href="hw/hw01.pdf">Homework 1</a>
@@ -150,5 +154,6 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/MAGAZINE.CSV">MAGAZINE.CSV</a>
     </ul>
   <li><a href="handout/final.pdf">Sample Final</a>
+-->
 </ul>
 </main>
