Added audio, slides for journal club

--- a/reports/index.html
+++ b/reports/index.html
@@ -37,6 +37,13 @@ title: Patrick O. Perry - Reports
       <cite>Journal of the Royal Statistical Society: Series B (Statistical Methodology)</cite>,
       <b>75</b>(5):821-849,
       2013.
+      <ul>
+        <li>Chosen for <a
+              href="http://www.rss.org.uk/RSS/Events/Online_and_virtual_events/Journal_club/Past_Journal_webinars/RSS/Events/Online_and_virtual_events_sub/Past_Journal_webinars.aspx">JRSS
+              Journal Webinar</a> on December 10, 2013 (Chaired by John Aston):
+            <a href="http://www.statslife.org.uk/journalclub/RSS-JC-10-12-13.mp3">Audio</a>&nbsp;(MP3);
+            <a href="iproc/slides-rss-2013.pdf">Slides</a>&nbsp;(PDF).
+      </ul>
     </li>
 
 
