add ub0003 website

--- a/courses/index.html
+++ b/courses/index.html
@@ -20,6 +20,14 @@ title: Patrick O. Perry - Courses
       Overview of inferential statistics and an introduction to R.
     </dd>
 
+
+    <dt>
+    <a href="/course/ub0003">Regression and Forecasting Models (Undergrad)</a>
+    </dt>
+    <dd>
+      Linear regression and applications.
+    </dd>
+
     <dt>
     <a href="/course/cor1305">Statistics and Data Analysis (MBA)</a>
     </dt>
