add sampling lecture notes

--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -31,13 +31,16 @@ stylesheet: /css/main.css?v=1
 </dl>
 
 
-<!--
 <h2>Lecture Notes</h2>
 <ul>
-  <li><a href="lecture/sampling.pdf">Sep 22 (1) - Sampling / Descriptive Statistics 1</a>
-    (<a href="lecture/sampling-sol.pdf">Solutions</a>)
+  <li><a href="lecture/sample.pdf">Sep 03 - Sampling Distributions</a>
+    (<a href="lecture/sample-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="http://chriswhong.com/open-data/foil_nyc_taxi/">Taxi Data</a>
+      <li><a href="http://www.nyc.gov/html/dcp/html/neigh_info/nhmap.shtml">Map of Community Districts</a>
+      <li><a href="http://onlinestatbook.com/stat_sim/sampling_dist/">Central Limit Theorem Demo</a>
+    </ul>
 </ul>
--->
 
 
 <!--
