--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -57,13 +57,10 @@ stylesheet: /css/main.css?v=1
   <li><a href="handout/syllabus.pdf">Syllabus</a>
 <!--
   <li><a href="handout/minitab-tips.pdf">Minitab Tips</a>
-  <li><a href="hw/hw01.pdf">Homework 1</a>
-    <ul>
-      <li><a href="data/CelebrityEarnings.CSV">CelebrityEarnings.CSV</a>
-      <li><a href="data/MARKET.CSV">MARKET.CSV</a>
-      <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
-      <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
-    </ul>
 -->
+    <li><a href="hw/hw1.pdf">Homework #1</a> (Due Sep 10)
+    <ul>
+      <li><a href="data/normtemp.csv">normtemp.csv</a>
+    </ul>
 </ul>
 </main>
