--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -55,9 +55,7 @@ stylesheet: /css/main.css?v=1
 <h2>Handouts and Assignments</h2>
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
-<!--
-  <li><a href="handout/minitab-tips.pdf">Minitab Tips</a>
--->
+  <li><a href="handout/minitab.pdf">Minitab Tips</a>
     <li><a href="hw/hw1.pdf">Homework #1</a> (Due Sep 10)
     <ul>
       <li><a href="data/normtemp.csv">normtemp.csv</a>
