update TA office hour location

--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -27,7 +27,7 @@ stylesheet: /css/main.css?v=1
         <li>Wednesday, 1:00&nbsp;p.m.&nbsp;&ndash; 2:00&nbsp;p.m.</li>
     </ul>
   </dd>
-  <dd>Office: KMC 8-170 (near mailboxes)</dd>
+  <dd>Office: KMC 3-80</dd>
 </dl>
 
 
