Add hw1 solutions

--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -77,7 +77,7 @@ stylesheet: /css/main.css?v=1
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
   <li><a href="handout/minitab.pdf">Minitab Tips</a>
-  <li><a href="hw/hw1.pdf">Homework #1</a> (Due Sep 10)
+  <li><a href="hw/hw1.pdf">Homework #1</a> (<a href="hw/hw1-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/normtemp.csv">normtemp.csv</a>
     </ul>
