--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -59,6 +59,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/mealsdata.csv">mealsdata.csv</a>
       <li><a href="data/village.csv">village.csv</a>
     </ul>
+  <li><a href="lecture/reg-inference.pdf">Sep 17 - Regression Inference</a>
+    (<a href="lecture/reg-inference-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/mealsdata.csv">mealsdata.csv</a>
+      <li><a href="data/village.csv">village.csv</a>
+    </ul>
 </ul>
 
 
@@ -72,6 +78,7 @@ stylesheet: /css/main.css?v=1
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
 </p>
+
 
 <h2>Handouts and Assignments</h2>
 <ul>
@@ -87,6 +94,11 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/rpipe.csv">rpipe.csv</a>
       <li><a href="data/satmat.csv">satmat.csv</a>
+    </ul>
+  <li><a href="hw/hw3.pdf">Homework #3</a> (Due Sep 24)
+    <ul>
+      <li><a href="data/lspill.csv">lspill.csv</a>
+      <li><a href="data/defaultint.csv">defaultint.csv</a>
     </ul>
 </ul>
 </main>
