Add sample midterm

--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -100,5 +100,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/lspill.csv">lspill.csv</a>
       <li><a href="data/defaultint.csv">defaultint.csv</a>
     </ul>
+  <li><a href="handout/midterm-sample.pdf">Sample Midterm</a>
+      <ul>
+        <li>This is the midterm from the Spring 2014 offering of this course.
+        <li>Problems 4, 5, and 14 require material that we have not yet
+            covered; you will not be tested on this material.
+        <li>I will go over the solutions in class on Tuesday, Sep 22.
+      </ul>
 </ul>
 </main>
