add link to lecture video

--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -74,6 +74,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/baf05ef0d85447f1b6a248968a24943e1d">Sep 08</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/d1fd10bdb4af4f4fa5161c60b7be917c1d">Sep 10</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/3689ca0c1d574ebd969c4dc62b84bd211d">Sep 15</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b18964a932334dfe9756709157102bce1d">Sep 17</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
