update cor1305 materials

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -11,21 +11,21 @@ stylesheet: /css/main.css?v=1
 <dl>
   <dt>Instructor</dt>
   <dd>Prof. Perry (pperry@stern.nyu.edu)</dd>
-  <dd>Office Hours: Thursday 11:00AM&ndash;12:30PM, KMC 8-63 (or by appointment)</dd>
+  <dd>Office Hours: By appointment (available Tuesday 5:00PM&ndash;7:00PM, KMC 8-63)</dd>
 
   <dt>Teaching Fellow</dt>
   <dd>Paul Neumaier (pjn222@stern.nyu.edu)</dd>
-  <dd>Office Hours: TBA</dd> <!-- Thursday 6:00PM&ndash;7:30PM, KMC 8th Floor (near mailboxes)</dd> -->
+  <dd>Office Hours: Thursday 6:30PM&ndash;8:00PM, KMC 7-100 (TA Center)</dd>
 </dl>
 
 
-<!--
 <h2>Lecture Notes</h2>
 <ul>
-  <li><a href="lecture/sampling.pdf">Sep 22 (1) - Sampling / Descriptive Statistics 1</a>
+  <li><a href="lecture/sampling.pdf">Sep 21 (1) - Sampling / Descriptive Statistics 1</a>
     (<a href="lecture/sampling-sol.pdf">Solutions</a>)
-  <li><a href="lecture/descrip.pdf">Sep 22 (2) - Descriptive Statistics 2</a>
+  <li><a href="lecture/descrip.pdf">Sep 21 (2) - Descriptive Statistics 2</a>
     (<a href="lecture/descrip-sol.pdf">Solutions</a>)
+<!--
   <li><a href="lecture/prob.pdf">Sep 29 (1) - Probability</a>
     (<a href="lecture/prob-sol.pdf">Solutions</a>)
   <li><a href="lecture/cond-prob.pdf">Sep 29 (2) - Conditional Probability</a>
@@ -105,7 +105,6 @@ stylesheet: /css/main.css?v=1
 <h2>Handouts and Assignments</h2>
 <ul>
   <li><a href="handout/syllabus.pdf">Syllabus</a>
-<!--
   <li><a href="http://goo.gl/hs16Kk">Class Survey</a>
   <li><a href="handout/minitab-tips.pdf">Minitab Tips</a>
   <li><a href="hw/hw01.pdf">Homework 1</a>
@@ -115,6 +114,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
+<!--
   <li><a href="hw/hw02.pdf">Homework 2</a>
   <li><a href="hw/hw03.pdf">Homework 3</a>
   <li><a href="hw/hw04.pdf">Homework 4</a>
