--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -92,7 +92,7 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="handout/ztable.pdf">Z Table</a>
   <li><a href="handout/ttable.pdf">T Table</a>
-  <li><a href="hw/hw2.pdf">Homework #2</a> (Due Sep 17)
+  <li><a href="hw/hw2.pdf">Homework #2</a> (<a href="hw/hw2-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/rpipe.csv">rpipe.csv</a>
       <li><a href="data/satmat.csv">satmat.csv</a>
