add link to lecture video

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -85,6 +85,7 @@ stylesheet: /css/main.css?v=1
 <h2>Lecture Videos</h2>
 <ul>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/3e8eb423ab5e42c595c0a89f0f22ed231d">Sep 21</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/38b2ebad4256427c8e8d27bb83ca69641d">Sep 28</a>
 </ul>
 
 
