add reg-diagnostic materials

--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -65,6 +65,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/mealsdata.csv">mealsdata.csv</a>
       <li><a href="data/village.csv">village.csv</a>
     </ul>
+  <li><a href="lecture/reg-diagnostic.pdf">Sep 29 - Regression Diagnostics</a>
+    (<a href="lecture/reg-diagnostic-sol.pdf">Solutions</a>)
 </ul>
 
 
@@ -76,6 +78,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/3689ca0c1d574ebd969c4dc62b84bd211d">Sep 15</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b18964a932334dfe9756709157102bce1d">Sep 17</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b4545d437f474d4fb500e226d732f6b61d">Sep 22</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4f9dba1868104716bff7a514a13fc6ab1d">Sep 29</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
