--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -67,6 +67,12 @@ stylesheet: /css/main.css?v=1
     </ul>
   <li><a href="lecture/reg-diagnostic.pdf">Sep 29 - Regression Diagnostics</a>
     (<a href="lecture/reg-diagnostic-sol.pdf">Solutions</a>)
+  <li><a href="lecture/reg-multiple.pdf">Oct 1 - Mulitple Regression, F Tests</a>
+    (<a href="lecture/reg-multiple-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/easton.csv">easton.csv</a>
+      <li><a href="data/mealsdata.csv">mealsdata.csv</a>
+    </ul>
 </ul>
 
 
@@ -79,6 +85,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b18964a932334dfe9756709157102bce1d">Sep 17</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b4545d437f474d4fb500e226d732f6b61d">Sep 22</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4f9dba1868104716bff7a514a13fc6ab1d">Sep 29</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e6276f765dd74062be9baa875745f7b91d">Oct 01</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -100,7 +107,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/rpipe.csv">rpipe.csv</a>
       <li><a href="data/satmat.csv">satmat.csv</a>
     </ul>
-  <li><a href="hw/hw3.pdf">Homework #3</a> (Due Sep 24)
+  <li><a href="hw/hw3.pdf">Homework #3</a> (<a href="hw/hw3-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/lspill.csv">lspill.csv</a>
       <li><a href="data/defaultint.csv">defaultint.csv</a>
@@ -112,5 +119,9 @@ stylesheet: /css/main.css?v=1
             covered; you will not be tested on this material.
         <li>I will go over the solutions in class on Tuesday, Sep 22.
       </ul>
+  <li><a href="hw/hw4.pdf">Homework #4</a> (Due October 8)
+    <ul>
+      <li><a href="data/gesell.csv">gesell.csv</a>
+    </ul>
 </ul>
 </main>
