--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -29,11 +29,11 @@ stylesheet: /css/main.css?v=1
     (<a href="lecture/prob-sol.pdf">Solutions</a>)
   <li><a href="lecture/cond-prob.pdf">Sep 28 (2) - Conditional Probability</a>
     (<a href="lecture/cond-prob-sol.pdf">Solutions</a>)
-<!--
-  <li><a href="lecture/randvar.pdf">Oct 6 (1) - Random Variables</a>
+  <li><a href="lecture/randvar.pdf">Oct 5 (1) - Random Variables</a>
     (<a href="lecture/randvar-sol.pdf">Solutions</a>)
-  <li><a href="lecture/counts.pdf">Oct 6 (2) - Models for Counts</a>
+  <li><a href="lecture/counts.pdf">Oct 5 (2) - Models for Counts</a>
     (<a href="lecture/counts-sol.pdf">Solutions</a>)
+<!--
   <li><a href="lecture/normal.pdf">Oct 13 (1) - The Normal Model</a>
     (<a href="lecture/normal-sol.pdf">Solutions</a>)
   <li><a href="lecture/clt.pdf">Oct 13 (2) - The Central Limit Theorem</a>
@@ -95,6 +95,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://goo.gl/hs16Kk">Class Survey</a>
   <li><a href="handout/minitab-tips.pdf">Minitab Tips</a>
   <li><a href="hw/hw01.pdf">Homework 1</a>
+    (<a href="hw/hw01sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/CelebrityEarnings.CSV">CelebrityEarnings.CSV</a>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
@@ -102,8 +103,8 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
   <li><a href="hw/hw02.pdf">Homework 2</a>
-<!--
   <li><a href="hw/hw03.pdf">Homework 3</a>
+<!--
   <li><a href="hw/hw04.pdf">Homework 4</a>
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
