update Plex link

--- a/code/index.html
+++ b/code/index.html
@@ -34,7 +34,7 @@ title: Patrick O. Perry - Code
     </dd>
 
     <dt>
-      <a href="http://comptop.stanford.edu/programs/plex.html">Plex</a>
+      <a href="http://mii.stanford.edu/research/comptop/programs/">Plex</a>
     </dt>
     <dd>
       A collection of MATLAB routines developed as a research tool for building and studying simplicial complexes generated from point-cloud data. Primarily written in C++.  Joint work with Vin de Silva.
