add new course materials

--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -73,6 +73,12 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/easton.csv">easton.csv</a>
       <li><a href="data/mealsdata.csv">mealsdata.csv</a>
     </ul>
+  <li><a href="lecture/reg-multiple-2.pdf">Oct 1 - Mulitple Regression 2</a>
+    (<a href="lecture/reg-multiple-2-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/easton.csv">easton.csv</a>
+      <li><a href="data/ugsurvey-fa13.csv">ugsurvey-fa13.csv</a>
+    </ul>
 </ul>
 
 
