add link to lecture video

--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -92,6 +92,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b4545d437f474d4fb500e226d732f6b61d">Sep 22</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4f9dba1868104716bff7a514a13fc6ab1d">Sep 29</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e6276f765dd74062be9baa875745f7b91d">Oct 01</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2ac81863c322475892855ce13165936d1d">Oct 06</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
