--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -79,6 +79,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/easton.csv">easton.csv</a>
       <li><a href="data/ugsurvey-fa13.csv">ugsurvey-fa13.csv</a>
     </ul>
+  <li><a href="lecture/reg-qualquant.pdf">Oct 8 - Regression with Qualitative and Quantitative Variables</a>
+    (<a href="lecture/reg-qualquant-sol.pdf">Solutions</a>)
+    <ul>
+      <li><a href="data/ugsurvey-fa13.csv">ugsurvey-fa13.csv</a>
+    </ul>
 </ul>
 
 
@@ -93,6 +98,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/4f9dba1868104716bff7a514a13fc6ab1d">Sep 29</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e6276f765dd74062be9baa875745f7b91d">Oct 01</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2ac81863c322475892855ce13165936d1d">Oct 06</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ecb462da93c74a96884d80bf42b1cd381d">Oct 08</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
@@ -130,5 +136,16 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/gesell.csv">gesell.csv</a>
     </ul>
+  <li><a href="hw/hw5.pdf">Homework #5</a> (Due October 15)
+    <ul>
+      <li><a href="data/acchw.csv">acchw.csv</a>
+      <li><a href="data/adrec.csv">adrec.csv</a>
+    </ul>
+  <li><a href="handout/final-sample.pdf">Sample Final</a>
+      <ul>
+        <li>Problem 9 requires material that we did not cover; 
+            you will not be tested on this material.
+        <li>I will go over the solutions in class on Thursday, Oct 15.
+      </ul>
 </ul>
 </main>
