Add note about hw4

--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -136,14 +136,17 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/gesell.csv">gesell.csv</a>
     </ul>
-  <li><a href="hw/hw5.pdf">Homework #5</a> (Due October 15)
+  <li><a href="hw/hw5.pdf">Homework #5</a> (Problems 1-4 only; Due October 15)
     <ul>
+      <li>Note: we did not cover the material necessary for problem 5. You
+        are not expected to know this material. You will only be graded on
+        problems 1-4.
       <li><a href="data/acchw.csv">acchw.csv</a>
       <li><a href="data/adrec.csv">adrec.csv</a>
     </ul>
   <li><a href="handout/final-sample.pdf">Sample Final</a>
       <ul>
-        <li>Problem 9 requires material that we did not cover; 
+        <li>Problems 9 and 10 require material that we did not cover; 
             you will not be tested on this material.
         <li>I will go over the solutions in class on Thursday, Oct 15.
       </ul>
