add hw2 solutions

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -104,6 +104,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/USDomesticBeer.CSV">USDomesticBeer.CSV</a>
     </ul>
   <li><a href="hw/hw02.pdf">Homework 2</a>
+    (<a href="hw/hw02sol.pdf">Solutions</a>)
   <li><a href="hw/hw03.pdf">Homework 3</a>
 <!--
   <li><a href="hw/hw04.pdf">Homework 4</a>
