add link to lecture video

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -87,6 +87,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/3e8eb423ab5e42c595c0a89f0f22ed231d">Sep 21</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/38b2ebad4256427c8e8d27bb83ca69641d">Sep 28</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6da60668ad9b40e6a24ca382ed9d51341d">Oct 05</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/df1b5c024ce24754b7e4bcb40e17a6b31d">Oct 12</a>
 </ul>
 
 
