add CEOPay dataset

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -38,6 +38,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="lecture/clt.pdf">Oct 12 (2) - The Central Limit Theorem</a>
     (<a href="lecture/clt-sol.pdf">Solutions</a>)
     <ul>
+      <li><a href="data/CEOPAY.CSV">CEOPAY.CSV</a>
       <li><a href="http://onlinestatbook.com/stat_sim/sampling_dist/">Central Limit Theorem Demo</a>
     </ul>
 <!--
