add link to new course video

--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -99,6 +99,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/e6276f765dd74062be9baa875745f7b91d">Oct 01</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/2ac81863c322475892855ce13165936d1d">Oct 06</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/ecb462da93c74a96884d80bf42b1cd381d">Oct 08</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/82e4159056f849c9989040f5d363e1051d">Oct 15</a>
 </ul>
 <p>Note: to watch these videos, you may need to log on to <a href="http://vpn.stern.nyu.edu/">vpn.stern.nyu.edu</a>
   and click &ldquo;Start&rdquo; next to &ldquo;Network Connect.&rdquo;
