Add hw4, hw5 solutions

--- a/course/ub0003/index.html
+++ b/course/ub0003/index.html
@@ -133,11 +133,11 @@ stylesheet: /css/main.css?v=1
             covered; you will not be tested on this material.
         <li>I will go over the solutions in class on Tuesday, Sep 22.
       </ul>
-  <li><a href="hw/hw4.pdf">Homework #4</a> (Due October 8)
+  <li><a href="hw/hw4.pdf">Homework #4</a> (<a href="hw/hw4-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/gesell.csv">gesell.csv</a>
     </ul>
-  <li><a href="hw/hw5.pdf">Homework #5</a> (Problems 1-4 only; Due October 15)
+  <li><a href="hw/hw5.pdf">Homework #5</a> (<a href="hw/hw5-sol.pdf">Solutions</a>)
     <ul>
       <li>Note: we did not cover the material necessary for problem 5. You
         are not expected to know this material. You will only be graded on
