--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -41,11 +41,11 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/CEOPAY.CSV">CEOPAY.CSV</a>
       <li><a href="http://onlinestatbook.com/stat_sim/sampling_dist/">Central Limit Theorem Demo</a>
     </ul>
-<!--
-  <li><a href="lecture/confint-mean.pdf">Oct 20 (1) - Confidence Interval for Population Mean</a>
+  <li><a href="lecture/sample-dist.pdf">Oct 19 (1) - Sampling Distributions</a>
+    (<a href="lecture/sample-dist-sol.pdf">Solutions</a>)
+  <li><a href="lecture/confint-mean.pdf">Oct 19 (2) - Confidence Interval for Population Mean</a>
     (<a href="lecture/confint-mean-sol.pdf">Solutions</a>)
-  <li><a href="lecture/confint-prop.pdf">Oct 20 (2) - Confidence Interval for Population Proportion</a>
-    (<a href="lecture/confint-prop-sol.pdf">Solutions</a>)
+<!--
   <li><a href="lecture/htest.pdf">Nov 3 (1) - Hypothesis Tests</a>
     (<a href="lecture/htest-sol.pdf">Solutions</a>)
     <ul>
@@ -89,6 +89,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/38b2ebad4256427c8e8d27bb83ca69641d">Sep 28</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6da60668ad9b40e6a24ca382ed9d51341d">Oct 05</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/df1b5c024ce24754b7e4bcb40e17a6b31d">Oct 12</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/43c31b57ce30491bbc3b8bc31f42094b1d">Oct 19</a>
 </ul>
 
 
@@ -112,13 +113,13 @@ stylesheet: /css/main.css?v=1
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
-<!--
   <li><a href="handout/t-percentile.pdf">T-Table: Percentiles of Student's t distribution</a>
   <li><a href="hw/hw05.pdf">Homework 5</a>
     <ul>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
     </ul>
+<!--
   <li><a href="hw/hw06.pdf">Homework 6</a>
     <ul>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
