--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -109,6 +109,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="hw/hw02.pdf">Homework 2</a>
     (<a href="hw/hw02sol.pdf">Solutions</a>)
   <li><a href="hw/hw03.pdf">Homework 3</a>
+    (<a href="hw/hw03sol.pdf">Solutions</a>)
   <li><a href="hw/hw04.pdf">Homework 4</a>
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
