--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -90,6 +90,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/6da60668ad9b40e6a24ca382ed9d51341d">Oct 05</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/df1b5c024ce24754b7e4bcb40e17a6b31d">Oct 12</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/43c31b57ce30491bbc3b8bc31f42094b1d">Oct 19</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b541f1dcdac547b988ef6364394c923a1d">Oct 22 (Review Session)</a>
 </ul>
 
 
@@ -111,6 +112,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="hw/hw03.pdf">Homework 3</a>
     (<a href="hw/hw03sol.pdf">Solutions</a>)
   <li><a href="hw/hw04.pdf">Homework 4</a>
+    (<a href="hw/hw04sol.pdf">Solutions</a>)
   <li><a href="handout/normal-cdf.pdf">Normal CDF Table</a>
   <li><a href="handout/normal-inv-cdf.pdf">Normal Inverse CDF Table</a>
   <li><a href="handout/midterm.pdf">Sample Midterm</a>
