add hw6 solutions; add hw8

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -134,6 +134,7 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
     </ul>
   <li><a href="hw/hw06.pdf">Homework 6</a>
+    (<a href="hw/hw06sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
@@ -143,13 +144,15 @@ stylesheet: /css/main.css?v=1
       <li><a href="data/NormTemp.CSV">NormTemp.CSV</a>
       <li><a href="data/retail_sales.csv">retail_sales.csv</a>
     </ul>
-<!--
   <li><a href="hw/hw08.pdf">Homework 8</a>
     <ul>
       <li><a href="data/DiamondPrices.CSV">DiamondPrices.CSV</a>
       <li><a href="data/MARKET.CSV">MARKET.CSV</a>
+<!--
       <li><a href="data/PriceToEarnings.CSV">PriceToEarnings.CSV</a>
+-->
     </ul>
+<!--
   <li><a href="handout/f-percentile.pdf">F-Table: Percentiles of F distribution</a>
   <li><a href="hw/hw09.pdf">Homework 9</a>
     <ul>
