add inference handout

--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -69,24 +69,28 @@ stylesheet: /css/main.css?v=1
     <ul>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
-<!--
-  <li><a href="lecture/assoc.pdf">Nov 17 (1) - Association and Causation</a>
-    (<a href="lecture/assoc-sol.pdf">Solutions</a>)
-  <li><a href="lecture/reg-inference.pdf">Dec 1 (1) - Regression Inference and Forecasting</a>
+  <li><a href="lecture/reg-inference.pdf">Nov 16 (2) - Regression Inference and Forecasting</a>
     (<a href="lecture/reg-inference-sol.pdf">Solutions</a>)
-  <li><a href="lecture/reg-diagnostics.pdf">Dec 1 (2) - Regression Diagnostics</a>
+    <ul>
+      <li><a href="data/Village.CSV">Village.CSV</a>
+      <li><a href="data/dinners-commute.csv">dinners-commute.csv</a>
+    </ul>
+<!--
+  <li><a href="lecture/reg-diagnostics.pdf">Nov 23 (1) - Regression Diagnostics</a>
     (<a href="lecture/reg-diagnostics-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/interest-gmat.csv">interest-gmat.csv</a>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
       <li><a href="data/Village.CSV">Village.CSV</a>
     </ul>
-  <li><a href="lecture/reg-multiple.pdf">Dec 8 - Multiple Regression, F Tests</a>
+  <li><a href="lecture/reg-multiple.pdf">Nov 23 (2) - Multiple Regression, F Tests</a>
     (<a href="lecture/reg-multiple-sol.pdf">Solutions</a>)
     <ul>
       <li><a href="data/EASTON.CSV">EASTON.CSV</a>
       <li><a href="data/mealsData.csv">mealsData.csv</a>
     </ul>
+  <li><a href="lecture/assoc.pdf">Nov 30 (1) - Association and Causation</a>
+    (<a href="lecture/assoc-sol.pdf">Solutions</a>)
 -->
 </ul>
 
