--- a/course/cor1305/index.html
+++ b/course/cor1305/index.html
@@ -105,6 +105,7 @@ stylesheet: /css/main.css?v=1
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/b541f1dcdac547b988ef6364394c923a1d">Oct 22 (Review Session)</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/15742006626d445d80509cbc211d01a21d">Nov 02</a>
   <li><a href="http://nyustern.mediasite.com/Mediasite/Play/bbe12d5bdfbc4140bc9795a709256f991d">Nov 09</a>
+  <li><a href="http://nyustern.mediasite.com/Mediasite/Play/14a9598a02d5407caeeadcd5f3cad3c61d">Nov 16</a>
 </ul>
 
 
