update code page

--- a/code/index.html
+++ b/code/index.html
@@ -4,20 +4,39 @@ section: code
 title: Patrick O. Perry - Code
 ---
 <div class="code">
+  <h2>R Packages</h2>
   <dl>
-    <dt>
-      <a href="http://cran.r-project.org/web/packages/RMTstat/">RMTstat</a>
-    </dt>
-    <dd>
-      An R package for distributions and statistics from random matrix theory (RMT), mostly related to large sample covariance matrices.  Joint work with Iain Johnstone, Zongming Ma, and Morteza Shahram.
-    </dd>
 
     <dt>
       <a href="http://cran.r-project.org/web/packages/bcv/">bcv</a>
     </dt>
     <dd>
-      An R package for bi-cross-validation.  This package implements cross-validation-based methods for choosing the rank of an SVD approximation.
+      Bi-cross-validation.  This package implements cross-validation-based methods for choosing the rank of an SVD approximation.
     </dd>
+
+    <dt>
+      <a href="http://cran.r-project.org/web/packages/mbest/">mbest</a>
+    </dt>
+    <dd>
+      Fast moment-based estimation for hierarchical models.
+    </dd>
+
+    <dt>
+      <a href="http://cran.r-project.org/web/packages/RMTstat/">RMTstat</a>
+    </dt>
+    <dd>
+      Distributions and statistics from random matrix theory
+      (RMT), mostly related to large sample covariance matrices.  Joint work
+      with Iain Johnstone, Zongming Ma, and Morteza Shahram. (This software
+      will only work in R; For MATLAB, use the
+      <a href="https://www-m5.ma.tum.de/KPZ">Pr&auml;hofer-Spohn KPZ Tables</a>.)
+    </dd>
+
+  </dl>
+
+
+  <h2>Haskell</h2>
+  <dl>
 
     <dt>
       <a href="http://hackage.haskell.org/package/blas/">hs-blas</a>
@@ -33,11 +52,17 @@ title: Patrick O. Perry - Code
       A Haskell library for performing Monte-Carlo simulations.
     </dd>
 
+
+  <h2>MATLAB</h2>
+  <dl>
+
     <dt>
       <a href="http://mii.stanford.edu/research/comptop/programs/">Plex</a>
     </dt>
     <dd>
-      A collection of MATLAB routines developed as a research tool for building and studying simplicial complexes generated from point-cloud data. Primarily written in C++.  Joint work with Vin de Silva.
+      A collection of routines developed as a research tool to building and
+      study simplicial complexes generated from point-cloud data.  Joint work
+      with Gunnar Carlsson and Vin de Silva.
     </dd>
   </dl>
 
